<!-- 
 SlidePuzzleAndroid
 Copyright (C) 2012 Matt Boes.
 All rights reserved. 
-->

<resources>
    <string name="app_name">Slide Puzzle</string>
    <string name="title">Matts Slide Puzzle</string>  

    <string name="moves">Moves:</string>    
    <string name="goal">To Goal:</string>
    
	<string name="newPuzzle">New Puzzle</string>
    <string name="solve">Solve!</string>
    <string name="skipAhead">Skip Ahead</string>

    <string name="win">You Win!</string>
    
    <string name="about_label">About</string>
 	<string name="about_text"><i>Matts Slide Puzzle</i> is an implementation of the classic slide number puzzle.\n\nThe goal is to order the tiles 1 through 8, with the BLANK in the bottom right hand corner.\n\nTap the solve button to see it in action.\n\nThere are over 180,000 possible puzzles, ranging 0-31 moves away from the goal.\n\n<b>Happy puzzling!</b>\n\nCopyright (C) 2012 Matt Boes.  All rights reserved.</string>
 	<string name="play">Play!</string>
 	
 	<string name="close">Close</string>
    
</resources>
